SERVER-13356 correct an error in processing geonear index assignments